--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Zen+Antique&family=Zen+Kaku+Gothic+Antique:wght@300;500;700;900&display=swap");
-@import "~bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "./scss/BasicLayout";
 @import "./scss/Grid";
